portainer/portainer-agent-headless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"portainer"},"name":"portainer-agent-headless","namespace":"portainer"},"spec":{"clusterIP":"None","clusterIPs":["None"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","selector":{"app":"portainer-agent"},"sessionAffinity":"None","type":"ClusterIP"},"status":{"loadBalancer":{}}}
  creationTimestamp: '2022-09-29T20:49:21Z'
  labels:
    app.kubernetes.io/instance: portainer
  name: portainer-agent-headless
  namespace: portainer
  resourceVersion: '2217014'
  uid: acac3c7d-fb3a-4200-9c47-947d01a8dfd9
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app: portainer-agent
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
