portainer/portainer-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    .
  labels:
    app.kubernetes.io/instance: portainer
  name: portainer-agent
  namespace: portainer
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: portainer-agent
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: portainer-agent
    spec:
      containers:
        - env:
            - name: LOG_LEVEL
              value: DEBUG
            - name: AGENT_CLUSTER_ADDR
              value: portainer-agent-headless
            - name: KUBERNETES_POD_IP
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: status.podIP
          image: 'portainer/agent:2.15.1'
          imagePullPolicy: Always
          name: portainer-agent
          ports:
            - containerPort: 9001
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: portainer-sa-clusteradmin
      serviceAccountName: portainer-sa-clusteradmin
      terminationGracePeriodSeconds: 30
